spotpython 0.19.0:

- objectivefunctions.py:
    - class analytical capitalized to analytical

- kriging.py:
    exp_imp() function updated. Using (y_min - y0) / s0 to ensure that the value is a scalar.

spotpython 0.18.15:

- "numpy>=2.1.0" changed to "numpy>=2.0.0 updated in the dependencies to enable tensorflow compatibility

spotpython 0.18.14:

- "river>=0.22.0" and   "numpy>=2.1.0" updated in the dependencies


- objectivefunctions.py:
    doc updated


spotpackage 0.18.13:

- listgenerator.py:
    - New class class ListGenerator:

spotpython 0.18.11:

- testmodel, predictmodel, and cvmodel functions updated, so that they can handle DataModules specified by the user in fun_control.


spotpython 0.18.8:

- lightdatamodule.py:
    - New function: setup restructured
- lightcrossvalidationdatamodule.py:
    - accepts verbosity as an argument


spotpython 0.18.7:

- Separate train and test data sets can be passed to Lightning DataModules

spotpython 0.18.6:

- split.py:
    New function: compute_lengths_from_fractions()
- lightdatamodule.py:
    train, val, test set computation updated

spotpython 0.18.4:
- architecture.py:
    documentation updated

spotpython 0.18.3:

- init.py:
    show_config=True set as Default 


spotpython 0.18.2:

- spot.py: 
    Class Spot has new attribute "verbosity. Can be set via fun_control["verbosity"].


spotpython 0.18.1:

- nn_linear_regression.py: 
train steo uses log as follows:
    self.log("train_loss", loss, on_step=False, on_epoch=True, prog_bar=False)


spotpython 0.18.0

spor.set_self_attribute() removed


spotpython 0.17.2:


- trainmodel.py:
    Tensorboard logger uses the argument name="".

    doumentation updated

- init.py:
    fun_control_init() function accepts additional arguments for Lightning.


spotpython-0.17.1

- improved get_device function

spotpython-0.17.0

- designs.py and spacefilling.py:
Naming Conventions: The class names have been capitalized to follow the PEP 8 convention for class naming: