@@ -1,3 +1,8 @@
+spotpython 0.19.1:
+
+- objectivefunctions.py:
+    - vectorized versions
+
 spotpython 0.19.0:
 
 - objectivefunctions.py:
